--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <section class="top-banner">
     <header class="grid-spaceBetween">
       <span class="logo col-1">
-        <img src="images/logo.png" alt="Logo" />
+        <img src="/images/logo.png" alt="Logo" />
       </span>
       <nav class="col-8_sm-12">
         <a href="#">About</a>
