--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <div class="top-banner-content">
       <h1>
         <div>Ulla Risager</div>
-        Web Developer
+        Badass Web Developer
       <h1>
       <h3 class="top-banner-location">
         Canggu, Bali
